# benchmark-springhead

./: .isort.cfg  Corona_NLP_test.csv  README.md
app_springhead/: pyproject.toml
app_springhead/app/: main.py  specifications.yml
app_springhead/compose/: docker-compose.yml
app_springhead/dockerfiles/: springhead.dockerfile
app_springhead/requirements/: requirements.txt
app_statefun/: pyproject.toml
app_statefun/app/: bootstrap.py  config.py  dummy.py  main.py  module.yaml
app_statefun/app/adapters/: stateful_functions.py
app_statefun/app/controllers/: dependencies.py  statefun.py
app_statefun/app/handlers/: __init__.py  clustering.py  dummy.py  normalization.py  typename.py  vectorization.py
app_statefun/app/schemas/: __init__.py  requests.py  text.py
app_statefun/compose/: docker-compose.yml
app_statefun/dockerfiles/: functions.dockerfile
app_statefun/requirements/: requirements.dev.txt  requirements.txt
app_statefun/scripts/: start.sh
sidecar/: alembic.ini  pyproject.toml
sidecar/alembic/: env.py
sidecar/alembic/versions/: 2023011845_init_time_test_schema_d66524fce938.py
sidecar/app/: main.py  models.py
sidecar/app/controllers/: dependencies.py  router.py
sidecar/app/controllers/endpoints/: springhead.py  statefun.py
sidecar/app/core/: config.py  session.py
sidecar/app/schemas/: __init__.py  requests.py
sidecar/compose/: docker-compose.yml
sidecar/dockerfiles/: sidecar.dockerfile
sidecar/requirements/: requirements.dev.txt
sidecar/scripts/: init.sh  revision.sh  start.sh
sql_script/: springhead.sql  statefun.sql
