[tool.poetry]
name = "app-springhead"
version = "0.1.0"
description = ""
authors = ["Muhammad Daffa Dinaya <13518141@std.stei.itb.ac.id>"]
readme = "README.md"
packages = [{include = "app_springhead"}]

[tool.poetry.dependencies]
python = "^3.9"
springhead = {git = "https://github.com/mdaffad/springhead", tag = "v0.2.0"}
pyyaml = "^6.0"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
