[tool.poetry]
name = "app-statefun"
version = "0.1.0"
description = ""
authors = ["Muhammad Daffa Dinaya <13518141@std.stei.itb.ac.id>"]
readme = "README.md"
packages = [{include = "app_statefun"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
